--- a/playbooks/database.yml
+++ b/playbooks/database.yml
@@ -4,3 +4,6 @@
   tasks: 
    - name: install mysql-server
      apt: name=mysql-server state=present update_cache=yes
+
+   - name: Ensure mysqls-server is started
+     service: name=mysql state=started enabled=yes 
