--- a/playbooks/webserver.yml
+++ b/playbooks/webserver.yml
@@ -10,3 +10,5 @@
          - python-pip
          - python-virtualenv
 
+    - name: Ensure apache2 is started
+      service: name=apache2 state=started enabled=yes 
