--- a/playbooks/webserver.yml
+++ b/playbooks/webserver.yml
@@ -12,3 +12,12 @@
 
     - name: Ensure apache2 is started
       service: name=apache2 state=started enabled=yes 
+
+    - name: Ensure mod_wsgi is enabled
+      apache2_module: state=present name=wsgi
+      notify: restart apache2
+
+  handlers:
+    - name: restart apache2
+      service: name=apache2 state=restarted
+    
