--- a/playbooks/stack_status.yml
+++ b/playbooks/stack_status.yml
@@ -1,31 +1,67 @@
 ---
-- hosts: ansible-webserver
-  become: true
-  tasks: 
-    - name: verify webserver
-      command: service apache2 status
-
-    - name: verify if apache is runnig on port 80
-      wait_for: port=80 timeout=10
-
 - hosts: ansible-lb
   become: true
   tasks:
-    - name: verify nginx
+    - name: verify nginx service
       command: service nginx status
 
-    - name: verify if nginx is running on port 80
+    - name: verify nginx is listening on 80
+      wait_for: port=80 timeout=10
+
+- hosts: ansible-webserver
+  become: true
+  tasks:
+    - name: verify apache2 service
+      command: service apache2 status
+
+    - name: verify apache2 is listening on 80
       wait_for: port=80 timeout=10
 
 - hosts: ansible-db
   become: true
   tasks:
-    - name: verify DB 
+    - name: verify mysql service
       command: service mysql status
 
-    - name: verify if mysql is running on 3306
+    - name: verify mysql is listening on 3306
       wait_for: port=3306 timeout=10
 
+- hosts: ansible-control
+  tasks:
+    - name: verify end-to-end index response
+      uri: url=http://{{item}} return_content=yes
+      with_items: groups.loadbalancer
+      register: lb_index
 
+    - fail: msg="index failed to return content"
+      when: "'Hello, from sunny' not in item.content"
+      with_items: "{{lb_index.results}}"
 
+    - name: verify end-to-end db response
+      uri: url=http://{{item}}/db return_content=yes
+      with_items: groups.loadbalancer
+      register: lb_db
 
+    - fail: msg="db failed to return content"
+      when: "'Database Connected from' not in item.content"
+      with_items: "{{lb_db.results}}"
+
+- hosts: ansible-lb
+  tasks:
+    - name: verify backend index response
+      uri: url=http://{{item}} return_content=yes
+      with_items: groups.webserver
+      register: app_index
+
+    - fail: msg="index failed to return content"
+      when: "'Hello, from sunny {{item.item}}!' not in item.content"
+      with_items: "{{app_index.results}}"
+
+    - name: verify backend db response
+      uri: url=http://{{item}}/db return_content=yes
+      with_items: groups.webserver
+      register: app_db
+
+    - fail: msg="db failed to return content"
+      when: "'Database Connected from {{item.item}}!' not in item.content"
+      with_items: "{{app_db.results}}"
