--- a/playbooks/database.yml
+++ b/playbooks/database.yml
@@ -2,4 +2,4 @@
 - hosts: ansible-db
   become: true
   roles:
-     - mysql
+    - { role: mysql, db_name: demo, db_user_name: demo, db_user_pass: demo, db_user_host: '%' }
